thank you template

--- a/Art_Gallery/templates/checkout.html
+++ b/Art_Gallery/templates/checkout.html
@@ -34,7 +34,7 @@
         <div class="col-sm">
             <!-- display image to the left -->
             {% if product %}
-                <img src="{{product.main_painting.url}}" class="card-img heckout_img pl-0" 
+                <img src="{{product.main_painting.url}}" class="card-img checkout_img pl-0" 
                     style="
                     height: 180px; 
                     width: 180px; 
