--- a/Art_Gallery/templates/japan_thankyou_email.html
+++ b/Art_Gallery/templates/japan_thankyou_email.html
@@ -45,7 +45,7 @@ Item purchased: {{painting_name}}
 Order number: {{orderId}}
 
 
-Since we are shipping from Japan, please allow up to three weeks for your painting to be delivered to your address.
+Please allow up to one week for your painting to be delivered to your address.
 
 If you have any questions or concerns regarding your order, including cancellation/refund inquiries,
 please do not hesitate to reach out to me at kaoruartgallery@gmail.com.
