--- a/Art_Gallery/templates/register.html
+++ b/Art_Gallery/templates/register.html
@@ -23,25 +23,25 @@
                                     <!-- remember csrf_token declaration for security middleware, creates csrf cookie -->
                                     {% csrf_token %}
                                     <!-- First name -->
-                                    <div class="form-group p-3">
+                                    <div class="form-group py-2 px-3">
                                         <input type="text" name="first_name" placeholder="{% translate "名前" %}" class="form-control" />
                                     </div>
                                     <!-- Last name -->
-                                    <div class="form-group p-3">
+                                    <div class="form-group py-2 px-3">
                                         <input type="text" name="last_name" placeholder="{% translate "苗字" %}" class="form-control" />
                                     </div>
                                     <!-- Username input -->
-                                    <div class="form-group p-3">
+                                    <div class="form-group py-2 px-3">
                                         <input type="text" name="username" placeholder="{% translate "ユーザー名" %}" class="form-control" />
                                     </div>
                                     <!-- email input -->
-                                    <div class="form-group p-3">
+                                    <div class="form-group py-2 px-3">
                                         <input type="email" name="email" placeholder="{% translate "メールアドレス" %}" class="form-control" />
                                     </div>
-                                    <div class="form-group p-3">
+                                    <div class="form-group py-2 px-3">
                                         <input type="password" name="password1" placeholder="{% translate "パスワード" %}" class="form-control" />
                                     </div>
-                                    <div class="form-group p-3">
+                                    <div class="form-group py-2 px-3">
                                         <input type="password" name="password2" placeholder="{% translate "パスワード再入力" %}" class="form-control" />
                                     </div>
                                     <div class="text-center">
@@ -52,7 +52,7 @@
                                 <!-- Login redirect -->
                                 <div class="text-center">
                                     <div class="text-center">
-                                        <a role="button" type="submit" class="btn btn-sm btn-outline-dark btn-block mb-4" href="/account/login">{% translate "アカウントをお持ちの方" %}</a>
+                                        <a role="button" type="submit" class="btn btn-sm btn-outline-success btn-block mb-4" href="/account/login">{% translate "アカウントをお持ちの方" %}</a>
                                     </div>
                                 </div>
                             </div>
